# citation_linker_app

./: .gitmodules  README.md  User_Guide_Interactions_and_Workflow.md  pyproject.toml  requirements-dev.txt
.github/workflows/: build.yml
QtApp/: dev.py  main.py  pyproject.toml  requirements.txt
QtApp/src/qtapp/: PdfViewer.py  dev.py  main.py  qtToPymuUtils.py
QtApp/src/qtapp/components/: DocConfig.py  FileManager.py  PdfViewer.py  PopupWidget.py
QtApp/src/qtapp/utils/: Bridge.py  FileManager.py  TextHandler.py  bak.bridge  getAnnotations.py  qtToPymuUtils.py
QtApp/src/qtapp/viewerUtils/: ExtendedView.py  Navigator.py  TextHandler.py  TextHandling.py  TextSelector.py  ZoomSelector.py  navigator.py
build_scripts/: build.py  citation_linker.spec
